Finalize CDN simulator project