@@ -1,95 +1,135 @@
 package mk.ukim.finki.cdn_simulatorproject.service;
 
 import jakarta.annotation.PostConstruct;
-import jakarta.transaction.Transactional;
-import mk.ukim.finki.cdn_simulatorproject.cache.CachingAlgorithmType;
+import mk.ukim.finki.cdn_simulatorproject.cache.cachingAlgorithms.FIFOAlgorithm;
+import mk.ukim.finki.cdn_simulatorproject.cache.cachingAlgorithms.LFUAlgorithm;
+import mk.ukim.finki.cdn_simulatorproject.cache.cachingAlgorithms.LRUAlgorithm;
 import mk.ukim.finki.cdn_simulatorproject.dto.HopDTO;
-import mk.ukim.finki.cdn_simulatorproject.model.*;
+import mk.ukim.finki.cdn_simulatorproject.model.ClientRequest;
+import mk.ukim.finki.cdn_simulatorproject.model.EdgeServer;
+import mk.ukim.finki.cdn_simulatorproject.model.EdgeServerManager;
+import mk.ukim.finki.cdn_simulatorproject.model.OriginServer;
+import mk.ukim.finki.cdn_simulatorproject.model.ReplicaServer;
+import mk.ukim.finki.cdn_simulatorproject.model.Resource;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 @Service
 public class SimulationService {
 
+    private static final int CACHE_CAPACITY = 2;
+
     private final CDNService cdnService;
     private final EdgeServerManager edgeServerManager;
-    private final ReplicaServerManager replicaServerManager;
     private final OriginServer originServer;
 
-    private final List<ClientRequest> requestLog = new ArrayList<>();
+    private final List<ClientRequest> requestLog;
 
-    public SimulationService(CDNService cdnService, EdgeServerManager edgeServerManager, ReplicaServerManager replicaServerManager, OriginServer originServer) {
+    private List<HopDTO> lastTrace;
+
+    public SimulationService(
+            CDNService cdnService,
+            EdgeServerManager edgeServerManager,
+            OriginServer originServer
+    ) {
         this.cdnService = cdnService;
         this.edgeServerManager = edgeServerManager;
-        this.replicaServerManager = replicaServerManager;
         this.originServer = originServer;
+        this.requestLog = new ArrayList<>();
+        this.lastTrace = List.of();
     }
 
     @PostConstruct
-    public void init(){
+    public void init() {
         initializeTopology();
     }
 
-    @Transactional
     public void initializeTopology() {
-        ReplicaServer rep1 = new ReplicaServer();
-        rep1.setReplicaServerId("replica-us-east");
-        rep1.setCachingAlgorithmType(CachingAlgorithmType.LRU);
-        rep1.setLocation("us-east-1");
-        rep1.setOriginServer(originServer);
-        rep1.init();
-        cdnService.addReplicaServer(rep1);
+        ReplicaServer replicaUsEast = new ReplicaServer(
+                "replica-us-east",
+                new LRUAlgorithm(CACHE_CAPACITY),
+                originServer,
+                "us-east-1"
+        );
 
-        ReplicaServer rep2 = new ReplicaServer();
-        rep2.setReplicaServerId("replica-eu-west");
-        rep2.setCachingAlgorithmType(CachingAlgorithmType.LFU);
-        rep2.setLocation("eu-west-1");
-        rep2.setOriginServer(originServer);
-        rep2.init();
-        cdnService.addReplicaServer(rep2);
+        ReplicaServer replicaEuWest = new ReplicaServer(
+                "replica-eu-west",
+                new LFUAlgorithm(CACHE_CAPACITY),
+                originServer,
+                "eu-west-1"
+        );
 
-        EdgeServer edgeA = new EdgeServer();
-        edgeA.setEdgeServerId("edge-a");
-        edgeA.setCachingAlgorithmType(CachingAlgorithmType.FIFO);
-        edgeA.setReplicaServer(rep1);
-        edgeA.init();
+        cdnService.addReplicaServer(replicaUsEast);
+        cdnService.addReplicaServer(replicaEuWest);
+
+        EdgeServer edgeA = new EdgeServer(
+                "edge-a",
+                new FIFOAlgorithm(CACHE_CAPACITY),
+                replicaUsEast
+        );
+
+        EdgeServer edgeB = new EdgeServer(
+                "edge-b",
+                new LRUAlgorithm(CACHE_CAPACITY),
+                replicaEuWest
+        );
+
         edgeServerManager.addEdgeServer(edgeA);
-
-        EdgeServer edgeB = new EdgeServer();
-        edgeB.setEdgeServerId("edge-b");
-        edgeB.setCachingAlgorithmType(CachingAlgorithmType.LRU);
-        edgeB.setReplicaServer(rep2);
-        edgeB.init();
         edgeServerManager.addEdgeServer(edgeB);
     }
 
-    private List<HopDTO> lastTrace = new ArrayList<>();
-    public List<HopDTO> getLastTrace(){ return lastTrace; }
+    public ClientRequest handleClientRequest(
+            String clientId,
+            String resourceId,
+            String url
+    ) {
+        if (clientId == null || clientId.isBlank()) {
+            throw new IllegalArgumentException("Client ID is required.");
+        }
 
-    public ClientRequest handleClientRequest(String clientId,String resId,String url){
+        if (resourceId == null || resourceId.isBlank()) {
+            throw new IllegalArgumentException("Resource ID is required.");
+        }
+
+        if (url == null || url.isBlank()) {
+            throw new IllegalArgumentException("URL is required.");
+        }
+
         List<HopDTO> trace = new ArrayList<>();
 
-        Resource res = cdnService.fetchResource(resId, trace);
+        Resource resource = cdnService.fetchResource(resourceId, trace);
 
-        ClientRequest req = new ClientRequest();
-        req.setClientID(clientId);
-        req.setResourceId(resId);
-        req.setUrl(url);
-        req.setTimestamp(Instant.now().toEpochMilli());
-        req.setCached(res.isResourceIsCached());
-        req.setResourcePath(res.getResourcePath());
+        if (resource == null) {
+            throw new IllegalArgumentException(
+                    "Resource not found: " + resourceId
+            );
+        }
 
-        requestLog.add(req);
-        this.lastTrace = trace;
+        boolean servedFromCache = trace.stream()
+                .anyMatch(HopDTO::hit);
 
-        return req;
+        ClientRequest request = new ClientRequest();
+        request.setClientID(clientId);
+        request.setResourceId(resourceId);
+        request.setUrl(url);
+        request.setTimestamp(Instant.now().toEpochMilli());
+        request.setCached(servedFromCache);
+        request.setResourcePath(resource.getResourcePath());
+
+        requestLog.add(request);
+        lastTrace = List.copyOf(trace);
+
+        return request;
+    }
+
+    public List<HopDTO> getLastTrace() {
+        return List.copyOf(lastTrace);
     }
 
     public List<ClientRequest> getRequestLog() {
-        return Collections.unmodifiableList(requestLog);
+        return List.copyOf(requestLog);
     }
 }
